HAMBURGER WORKS (open/close correctly) with this commit

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -199,9 +199,9 @@ $('.navbar-toggle').click(function(){
    $('.fa-bars').css('background-color', '#005fae');
    $('.fa-search-mobile').css('background-color', 'transparent');
 });
-$('.fa-bars').click(function(){
-   $('#content-nav').toggleClass('in');
-});
+// $('.fa-bars').click(function(){
+//    $('#content-nav').toggleClass('in');
+// });
 
 // when menu item clicked, open/close pushdown menu
 if ($(window).width() > 767) {
