--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -53,7 +53,7 @@
                    <a href="#"><li>Re-Admit</li></a>
                    <a href="#"><li>Non-Degree</li></a>
                    <a href="#"><li>Concurrently Enrolled</li></a>
-                   <a href="#">Cost</li></a>
+                   <a href="#"><li>Cost</li></a>
                  </ul>
                </li>
                <li id="nav-academics">
