--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -19,8 +19,8 @@
   ul a li {
     font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #00447c;
-    padding-left: 7px;
-    padding-right: 6px;
+    padding-left: 1.5em;
+    padding-right: 1.4em;
     -webkit-transition: all 0.25s ease-in-out;
     -moz-transition: all 0.25s ease-in-out;
     -o-transition: all 0.25s ease-in-out;
@@ -317,8 +317,8 @@
 
 #content-nav {
   font-family: 'Raleway', sans-serif;
-  letter-spacing: 5px;
-  font-weight: 500;
+  letter-spacing: 3px;
+  font-weight: 700;
   padding-left: 3px;
   color: #6E6E6E;
   border: none;
@@ -373,6 +373,7 @@
   text-align: right;
   margin-top: -1.0em;
   color: #fff;
+  padding-bottom: 0.6em;
   display: none;
 }
 
@@ -483,6 +484,8 @@
   .navbar-nav>li>a {
       padding-top: 10px;
       padding-bottom: 10px;
+      padding-left: 1.8em;
+      padding-right: 1.8em;
   }
   .collapse.in{
       display:block !important;
@@ -543,7 +546,6 @@
     width: fit-content;
     float: none;
     display: inline-block;
-    padding-top: 15px;
   }
 
   .navbar-collapse #wrapper {
@@ -558,12 +560,6 @@
   .container-dropdown {
     display: none;
   }
-
-//  .pushdown-menu {
-//    padding-top: 5px;
-//    padding-bottom: 5px;
-//  }
-
 
   li.dropdown {
     padding: 5px 0px;
@@ -583,7 +579,7 @@
     height: 10em;
   }
   #content-nav {
-    background: linear-gradient(to bottom, #fff 0px,#fff 50px, #ddd 50px);
+    background: linear-gradient(to bottom, #fff 0px,#fff 60px, #ddd 60px);
   }
   .mobile-header {
     border-right: 1px solid #337ab7;
@@ -638,14 +634,38 @@
 
 }
 
-
+@media (min-width: $screen-md-min) {
+  .navbar-nav > li > a {
+      padding-bottom: 8px;
+  }
+  #content-nav {
+    letter-spacing: 0px;
+    font-weight: 500;
+  }
+  .mobile-header {
+    margin-top: 5px;
+  }
+  .fa-search {
+    padding-top: 1.0em;
+  }
+  #content-nav #nav-search-close {
+      top: -3.2em;
+      left: 17.6em;
+  }
+}
 
 @media (min-width: $screen-lg-min) {
-.header-container {
+  .header-container {
         padding-left: percentage(1/$grid-columns) ;
         padding-right: percentage(1/$grid-columns) ;
     }
-
+  #content-nav {
+      letter-spacing: 2px;
+      font-weight: 600;
+      font-size: 18px;
+      padding-right: 1em;
+      padding-left: 0em;
+  }
 .msudenver_logo {
     max-height:150px;
   }
@@ -667,31 +687,32 @@
       top: -3.5em;
       left: 32em;
   }
+
+
+  li .pushdown-menu {
+      font-weight: 500;
+      font-size: 0.8em;
+  }
+
   #nav-faculty {
-    width: 16em;
+    width: 12em;
   }
   #nav-admissions {
-    width: 17em;
+    width: 15em;
   }
   #nav-academics {
-    width: 17em;
+    width: 13em;
   }
   #nav-campus {
-    width: 15em;
+    width: 13em;
   }
   #nav-alumni {
-    width: 15em;
+    width: 12em;
   }
   #nav-search {
-    width: 1em;
+    width: 0.3em;
   }
-  .nav > a > li {
-    font-size: 1.4em;
-  }
-  .pushdown-menu>li>a {
-      font-weight: 600;
-      font-size: 1.3em;
-  }
+
 }
 
 @media only screen and (min-width:1358px) {
@@ -733,4 +754,24 @@
   #content-nav #search-input input[type=text] {
     width: 80.5em;
   }
+
+  #nav-faculty {
+    width: 14em;
+  }
+  #nav-admissions {
+    width: 17em;
+  }
+  #nav-academics {
+    width: 14em;
+  }
+  #nav-campus {
+    width: 14em;
+  }
+  #nav-alumni {
+    width: 14em;
+  }
+  #nav-search {
+    width: 0.3em;
+  }
+
 }
