--- a/www-root/includes/header.html
+++ b/www-root/includes/header.html
@@ -85,7 +85,7 @@
                </li>
                <li id="nav-alumni">
                  <a class="mobile-header mobile-alumni menu-last"><span class="fa fa-chevron-down pull-right"></span>Alumni</a>
-                 <ul class="pushdown-menu pushdown-alumni">
+                 <ul class="pushdown-menu pushdown-alumni menu-last">
                    <a href="/alumni/"><li>Alumni</li></a>
                    <a href="/alumni/careerservices/"><li>Career Services</li></a>
                    <a href="/alumni/alumnibenefits/"><li>Alumni Benefits</li></a>
