--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -7511,11 +7511,11 @@ header {
   background-color: #fff;
 }
 
-#content-nav #search-input .button {
+#content-nav #search-input .search-button {
   display: inline-block;
   padding-left: 3px;
-  top: -3.5em;
-  left: 15em;
+  top: -3.3em;
+  left: 26em;
   position: relative;
   height: 2.8em;
   width: 8.0em;
@@ -7526,23 +7526,23 @@ header {
   font-family: 'Raleway', sans-serif;
 }
 
-#content-nav #search-input .button:hover {
+#content-nav #search-input .search-button:hover {
   color: #fff;
   background-color: #00447c;
 }
-#content-nav #search-input .button:hover ::-webkit-input-placeholder {
+#content-nav #search-input .search-button:hover ::-webkit-input-placeholder {
   color: #fff;
   background-color: #00447c;
 }
-#content-nav #search-input .button:hover :-moz-placeholder {
+#content-nav #search-input .search-button:hover :-moz-placeholder {
   /* Firefox 18- */
   color: gray;
 }
-#content-nav #search-input .button:hover ::-moz-placeholder {
+#content-nav #search-input .search-button:hover ::-moz-placeholder {
   /* Firefox 19+ */
   color: gray;
 }
-#content-nav #search-input .button:hover :-ms-input-placeholder {
+#content-nav #search-input .search-button:hover :-ms-input-placeholder {
   color: gray;
 }
 
@@ -7574,7 +7574,7 @@ header {
 
 .fa-search {
   color: #007dc3 !important;
-  padding-top: 1.2em;
+  padding-top: 0.9em;
   font-size: 1.2em;
   cursor: pointer;
 }
@@ -8063,21 +8063,51 @@ header {
   }
 
   #content-nav {
-    letter-spacing: 0px;
+    letter-spacing: 1px;
     font-weight: 500;
+    padding-right: 4em;
   }
 
   .mobile-header {
     margin-top: 5px;
   }
 
-  .fa-search {
-    padding-top: 1.0em;
+  .left-addon .fa-search {
+    left: 1em;
+    top: 0;
   }
 
   #content-nav #nav-search-close {
     top: -3.2em;
-    left: 17.6em;
+    left: 19.2em;
+  }
+
+  #nav-faculty {
+    width: 11em;
+  }
+
+  #nav-admissions {
+    width: 14em;
+  }
+
+  #nav-academics {
+    width: 11em;
+  }
+
+  #nav-campus {
+    width: 11em;
+  }
+
+  #nav-alumni {
+    width: 10em;
+  }
+
+  #nav-search {
+    width: 0em;
+  }
+
+  #content-nav #search-input input[type="text"] {
+    padding-top: 0.3em;
   }
 }
 @media (min-width: 1200px) {
@@ -8090,7 +8120,7 @@ header {
     letter-spacing: 2px;
     font-weight: 600;
     font-size: 18px;
-    padding-right: 1em;
+    padding-right: 6em;
     padding-left: 0em;
   }
 
@@ -8112,13 +8142,13 @@ header {
   }
 
   #content-nav #nav-search-close {
-    top: -84px;
-    left: 25.2em;
+    top: -67px;
+    left: 12.6em;
   }
 
-  #content-nav #search-input .button {
-    top: -3.5em;
-    left: 32em;
+  #content-nav #search-input .search-button {
+    top: -3.3em;
+    left: 17em;
   }
 
   li .pushdown-menu {
@@ -8127,7 +8157,7 @@ header {
   }
 
   #nav-faculty {
-    width: 12em;
+    width: 11em;
   }
 
   #nav-admissions {
@@ -8135,19 +8165,19 @@ header {
   }
 
   #nav-academics {
-    width: 13em;
-  }
-
-  #nav-campus {
-    width: 13em;
-  }
-
-  #nav-alumni {
     width: 12em;
   }
 
+  #nav-campus {
+    width: 11em;
+  }
+
+  #nav-alumni {
+    width: 11em;
+  }
+
   #nav-search {
-    width: 0.3em;
+    width: 0em;
   }
 }
 @media only screen and (min-width: 1358px) {
@@ -8162,8 +8192,8 @@ header {
 
   #content-nav #nav-search-close {
     font-size: 20px;
-    top: -3.3em;
-    left: 28em;
+    top: -3.2em;
+    left: 19em;
   }
 
   .fa-search {
@@ -8175,24 +8205,24 @@ header {
     top: 0.3em !important;
   }
 
-  #content-nav #search-input .button {
-    top: -2.8em;
+  #content-nav #search-input .search-button {
+    top: -2.7em;
     height: 30px;
     width: 130px;
-    left: 28em;
+    left: 19em;
   }
 
-  .button {
+  .search-button {
     font-size: 14px;
     line-height: 31px;
   }
 
   #content-nav #search-input input[type=text] {
-    width: 80.5em;
+    width: 97em;
   }
 
   #nav-faculty {
-    width: 14em;
+    width: 13em;
   }
 
   #nav-admissions {
@@ -8200,19 +8230,56 @@ header {
   }
 
   #nav-academics {
-    width: 14em;
+    width: 13em;
   }
 
   #nav-campus {
-    width: 14em;
+    width: 13em;
   }
 
   #nav-alumni {
-    width: 14em;
+    width: 13em;
   }
 
   #nav-search {
-    width: 0.3em;
+    width: 0em;
+  }
+
+  #content-nav {
+    padding-right: 4em;
+  }
+}
+@media only screen and (min-width: 1500px) {
+  #content-nav #nav-search-close {
+    left: 28em;
+  }
+
+  #content-nav #search-input .search-button {
+    left: 32em;
+  }
+
+  #nav-faculty {
+    width: 15em;
+  }
+
+  #nav-admissions {
+    width: 19em;
+  }
+
+  #nav-academics {
+    width: 15em;
+  }
+
+  #nav-campus {
+    width: 15em;
+  }
+
+  #nav-alumni {
+    width: 15em;
+  }
+
+  #nav-search {
+    width: 0em;
   }
 }
 /* Homepage base styles */
