removes background from inner pages

--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -116,7 +116,7 @@ img {
 }
 
 body {
-  background: #E9EDF1;
+  // background: #E9EDF1;
   font-family: Open Sans, helvetica, arial, sans-serif;
   font-size: 14px;
   line-height: 20px;
