--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -58,7 +58,7 @@
   margin-bottom: 1.5em
 }
 .custombtn {
-  border-radius: 0;
+  // border-radius: 0;
   margin-bottom: 15px;
   width: 100%;
   font-weight: 100!important;
