creates user-profile.scss and moves styles to own sass

--- a/development/terminalfour/src/sass/inner-style.scss
+++ b/development/terminalfour/src/sass/inner-style.scss
@@ -43,3 +43,4 @@ header {
 @import "ContentTypes/SiteHeader";
 @import "ContentTypes/stylestoimport";
 @import "ContentTypes/card";
+@import "ContentTypes/user-profile";
