adds homepage-base styles to inner styles for footer promo boxes

--- a/development/terminalfour/src/sass/inner-style.scss
+++ b/development/terminalfour/src/sass/inner-style.scss
@@ -24,6 +24,7 @@ header {
 /**  Components michael.mason@terminalfour.com **/
 @import "msu-partials/global-header";
 @import "msu-partials/msu-utils";
+@import "msu-partials/homepage-base";
 @import "msu-partials/footer";
 
 /**  ContentType Styles **/
