--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -1,3 +1,16 @@
+body {
+  // background: #E9EDF1;
+  margin-top: 70px;
+  font-family: Open Sans, helvetica, arial, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  color: #333;
+  -webkit-font-smoothing: subpixel-antialiased!important;
+  -ms-backface-visibility: hidden;
+
+}
+
+
 .collapse {
   position: relative;
   height: 0;
@@ -105,15 +118,6 @@ img {
   width: 80%
 }
 
-body {
-  // background: #E9EDF1;
-  font-family: Open Sans, helvetica, arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  color: #333;
-  -webkit-font-smoothing: subpixel-antialiased!important;
-  -ms-backface-visibility: hidden
-}
 .clickable {
   cursor: pointer
 }
