--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -7599,19 +7599,19 @@ header {
 /* style glyph */
 .inner-addon .fa-search {
   position: absolute;
-  padding: 17px 10px 10px 10px;
+  padding: 0.9em 1em 1em 3em;
   pointer-events: none;
 }
 
 /* align glyph */
 .left-addon .fa-search {
-  left: 1em;
-  top: -0.4em;
+  left: 0.3em;
+  top: 0em;
 }
 
 /* add padding  */
 .left-addon input {
-  padding-left: 70px;
+  padding-left: 8em;
   width: 101%;
 }
 
@@ -7891,7 +7891,7 @@ header {
 
   .navbar-nav {
     float: none !important;
-    margin-top: 7.5px;
+    margin: 7px 0px;
   }
 
   .navbar-nav > li {
@@ -8072,11 +8072,6 @@ header {
 
   .mobile-header {
     margin-top: 5px;
-  }
-
-  .left-addon .fa-search {
-    left: 1em;
-    top: 0;
   }
 
   #content-nav #nav-search-close {
@@ -8299,6 +8294,14 @@ header {
     width: 7%;
     font-weight: 600;
     margin-left: 0.15em;
+  }
+
+  .left-addon input {
+    padding-left: 9em;
+  }
+
+  .left-addon .fa-search {
+    left: 1.5em;
   }
 }
 /* Homepage base styles */
