--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -167,7 +167,7 @@
 
 .fa-search {
   color: #007dc3 !important;
-  padding-top: 0.9em;
+  padding-top: 1.3em;
   font-size: 1.2em;
   cursor: pointer;
 }
@@ -196,7 +196,7 @@
 /* align glyph */
 .left-addon .fa-search {
   left: 0.3em;
-  top: 0em;
+  top: -0.3em;
 }
 
 /* add padding  */
@@ -274,7 +274,7 @@
 
 .fa-bars {
   background-color: #005fae;
-  padding: 20px;
+  padding: 24px;
   margin: -17px -30px -16px -16px;
 }
 
@@ -285,7 +285,7 @@
   float: right;
   padding-right: 20px;
   padding-left: 20px;
-  padding-bottom: 23px;
+  padding-bottom: 24px;
 }
 
 .search-desktop {
@@ -604,6 +604,10 @@
   .fa.pull-right {
     display: none;
   }
+  .left-addon .fa-search {
+    top: 0em;
+  }
+
 }
 
 
@@ -685,6 +689,7 @@
   }
   .fa-search {
   font-size: 1.2em;
+  padding-top: 0.9em;
   }
   #content-nav #search-input input[type=text] {
     width: 89em;
