--- a/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
@@ -22,7 +22,7 @@ transition: opacity 250ms ease-in-out;
   // border-radius: 0;
   margin-bottom: 15px;
   width: 100%;
-  font-weight: 100!important;
+  // font-weight: 100!important;
   box-shadow: 1px 5px 5px rgba(0,0,0,0.175);
 }
 .custombtn span {
