--- a/development/terminalfour/src/sass/ContentTypes/_card.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_card.scss
@@ -6,3 +6,9 @@
   -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, .175);
   box-shadow: 0 1px 6px rgba(0, 0, 0, .175)
 }
+
+.row.card {
+  margin: 15px !important;
+  margin-right: 15px !important;
+  margin-top: 15px;
+}
