--- a/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
@@ -52,19 +52,19 @@
   padding: 10px 15px
 }
 #menu .pure-menu-heading, #menu .pure-menu-selected {
-  background: #333;
-  color: #fff
+  // background: #333;
+  // color: #fff
 }
 #menu .pure-menu-heading:hover, #menu .pure-menu-selected:hover {
-  color: #fff;
+  // color: #fff;
   text-decoration: none
 }
 #menu .pure-menu-selected a {
-  color: #fff
+  // color: #fff
 }
 #menu .pure-menu-heading {
-  font-size: 110%;
-  color: #fff;
+  // font-size: 110%;
+  // color: #fff;
   margin: 0
 }
 .menu-link {
@@ -131,13 +131,13 @@ ul.multilevel-linkul-0 {
 }
 
 @media (max-width: 767px) {
-  .header {
-    text-align: left
-  }
-  #layout {
-    position: relative;
-    padding-left: 0
-  }
+  // .header {
+  //   text-align: left
+  // }
+  // #layout {
+  //   position: relative;
+  //   padding-left: 0
+  // }
   #layout.active {
     position: relative;
     left: 150px
@@ -170,13 +170,13 @@ ul.multilevel-linkul-0 {
     margin: 0 auto;
     width: 100%
   }
-  .header {
-    text-align: left
-  }
+  // .header {
+  //   text-align: left
+  // }
 }
 .sidebar-nav {
   margin-bottom: 15px;
-  background: #002856;
+  // background: #002856;
 }
 .sidebar-nav ul li {
   list-style-type: none
