--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -7465,6 +7465,7 @@ header {
   border-right: 1px solid black;
   border-spacing: 10px;
   margin-top: 1.8em;
+  margin-bottom: 0.5em;
 }
 
 .nav > a > li {
@@ -7574,7 +7575,7 @@ header {
 
 .fa-search {
   color: #007dc3 !important;
-  padding-top: 1.3em;
+  padding-top: 1.1em;
   font-size: 1.2em;
   cursor: pointer;
 }
@@ -8047,6 +8048,10 @@ header {
   .left-addon .fa-search {
     top: 0em;
   }
+
+  .pushdown-menu {
+    height: 21em;
+  }
 }
 .header-container {
   margin-right: auto;
@@ -8189,6 +8194,10 @@ header {
     margin-left: 0.15em;
     margin-right: 0em;
   }
+
+  .pushdown-menu {
+    height: 22em;
+  }
 }
 @media only screen and (min-width: 1358px) {
   #search-input #search-text {
@@ -8257,6 +8266,10 @@ header {
 
   #content-nav {
     padding-right: 4em;
+  }
+
+  .pushdown-menu {
+    height: 19em;
   }
 }
 @media only screen and (min-width: 1500px) {
