changes background on siteheader

--- a/development/terminalfour/src/sass/ContentTypes/_SiteHeader.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_SiteHeader.scss
@@ -1,5 +1,5 @@
 #site-header {
-    background: url('../media/eventsbg_mobile.jpg') ;
+    background: url('../media/eventsbg.jpg') ;
     a {
         &:hover, &:active, &:focus {
             text-decoration: none;
