--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -10523,7 +10523,7 @@ div#lhnContainerDone {
   }
 }
 #site-header {
-  background: url("../media/eventsbg_mobile.jpg");
+  background: url("../media/eventsbg.jpg");
 }
 #site-header a:hover, #site-header a:active, #site-header a:focus {
   text-decoration: none;
