removes shadow from buttons and removes background from nav

--- a/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
@@ -3,7 +3,7 @@
     margin-bottom: 15px;
     // font-weight: 100!important;
     transition: opacity 250ms ease-in-out;
-    box-shadow: 1px 5px 5px rgba(0,0,0,0.175);
+    // box-shadow: 1px 5px 5px rgba(0,0,0,0.175);
 }
 
 .btn:hover {
@@ -23,7 +23,7 @@ transition: opacity 250ms ease-in-out;
   margin-bottom: 15px;
   width: 100%;
   // font-weight: 100!important;
-  box-shadow: 1px 5px 5px rgba(0,0,0,0.175);
+  // box-shadow: 1px 5px 5px rgba(0,0,0,0.175);
 }
 .custombtn span {
   color: #FFF
