--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -9145,13 +9145,14 @@ footer {
   left: 150px;
   bottom: 0;
   z-index: 9998;
-  background: #002856;
+  color: black;
   -webkit-overflow-scroll: touch;
 }
 
 #menu a {
   border: none;
-  font-size: 15px;
+  color: black;
+  font-size: 1.2rem;
   font-weight: 300;
   padding: 10px 20px 10px 10px;
   line-height: 1em;
@@ -9174,7 +9175,6 @@ footer {
 }
 
 #menu .pure-menu li a:focus, #menu .pure-menu li a:hover {
-  background: #fff;
   line-height: 1em;
   color: #1b557a;
   padding: 10px 15px;
@@ -9345,30 +9345,6 @@ ul.multilevel-linkul-0 {
 
 .sidebar-nav a:hover, .sidebar-nav li a:after {
   color: #fff;
-}
-
-ul.multilevel-linkul-0 li {
-  background: #00447C;
-}
-
-ul.multilevel-linkul-1 li {
-  background: #005BA5;
-}
-
-ul.multilevel-linkul-2 li {
-  background: #00447C;
-}
-
-ul.multilevel-linkul-3 li {
-  background: #2e8ece;
-}
-
-ul.multilevel-linkul-4 li {
-  background: #409ad5;
-}
-
-ul.multilevel-linkul-5 li {
-  background: #55a5d9;
 }
 
 .currentbranch0 a {
@@ -10524,6 +10500,7 @@ div#lhnContainerDone {
 }
 #site-header {
   background: url("../media/eventsbg.jpg");
+  margin-bottom: 25px;
 }
 #site-header a:hover, #site-header a:active, #site-header a:focus {
   text-decoration: none;
@@ -10531,7 +10508,6 @@ div#lhnContainerDone {
 
 .siteheader {
   margin-top: 15px;
-  margin-bottom: 15px;
   color: #fff;
 }
 
@@ -10845,7 +10821,6 @@ hr {
 .btn {
   margin-bottom: 15px;
   transition: opacity 250ms ease-in-out;
-  box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175);
 }
 
 .btn:hover {
@@ -10864,7 +10839,6 @@ hr {
 .custombtn {
   margin-bottom: 15px;
   width: 100%;
-  box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175);
 }
 
 .custombtn span {
