--- a/development/terminalfour/src/sass/ContentTypes/_HighlightBox.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_HighlightBox.scss
@@ -12,8 +12,9 @@
 }
 .HighlightBox .HighlightBox-title {
   color: #fff;
-  font-size: 1.5em;
-  text-align: center
+  text-align: center;
+  font-weight: 700;
+  font-size: 24px;
 }
 .HighlightBox .HighlightBox-content a {
   color: #fff !important;
