--- a/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
@@ -25,6 +25,6 @@ transition: opacity 250ms ease-in-out;
   // font-weight: 100!important;
   // box-shadow: 1px 5px 5px rgba(0,0,0,0.175);
 }
-.custombtn span {
-  color: #FFF
-}
+// .custombtn span {
+//   color: #FFF
+// }
