--- a/development/terminalfour/src/sass/ContentTypes/_panel.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_panel.scss
@@ -5,6 +5,8 @@
 }
 .panel-heading {
     border-radius: 0;
+    font-weight: 700;
+    font-size: 24px;
 }
 .panel-default > .panel-heading {
     background: #00447C;
@@ -14,6 +16,8 @@
 }
 .panel-title {
     color: #fff;
+    font-weight: 700;
+    font-size: 24px;
 }
 .panel-group {
   margin-bottom: 20px;
@@ -23,9 +27,9 @@
 .panel-danger>.panel-heading {
     background: #d63647;
     color: white;
-    font-size: 1.75em;
-    font-weight: 100;
     border-color: #df1300;
+    font-weight: 700;
+    font-size: 24px;
 }
 
 .panel-danger {
