--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -1,10 +1,11 @@
 body {
   // background: #E9EDF1;
   margin-top: 70px;
-  font-family: Open Sans, helvetica, arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  color: #333;
+  font-family: 'Karla', Open Sans, helvetica, arial, sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  color: #1e1e1e;
+  line-height: 1.6em;
   -webkit-font-smoothing: subpixel-antialiased!important;
   -ms-backface-visibility: hidden;
 
@@ -104,6 +105,7 @@ img {
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Karla', Open Sans, helvetica, arial, sans-serif;
+  font-weight: 400;
 }
 h1 {
   // padding-left: .5em;
@@ -113,31 +115,31 @@ h1 {
   // text-transform: uppercase;
 }
 h2 {
-font-weight: 600;
-color: #00529c;
-font-size: 2.2em;
+font-weight: 700;
+color: #4e5462;
+font-size: 2.25rem;
 width: 100%;
 margin: 0px;
 margin-bottom:15px;
 line-height: 1.3;
 }
 h3 {
-  color: #4C4C4D;
-  font-size: 1.8em;
+  color: #414b63;
+  font-size: 1.875em;
   font-weight: 400;
   margin-bottom: 4px;
   margin-top: 2px
 }
 h4 {
-  color: #015FAE;
-  font-size: 1.4em;
-  font-weight: 400;
+  color: #000000;
+  font-size: 1.25rem;
+  font-weight: 700;
   line-height: 1.3;
 }
 h5 {
-  color: #971200;
-  font-size: 1.2em;
-  font-weight: 600;
+  color: #535354;
+  font-size: 1.125em;
+  font-weight: 700;
 }
 h6 {
   color: #e74c3c;
@@ -155,8 +157,9 @@ h6 {
   border-radius: 0
 }
 ul.breadcrumb {
-  font-size: 16px;
-  color: #fff
+  color: #fff;
+  font-family: 'Karla', Open Sans, helvetica, arial, sans-serif;
+  font-size: 1em;
 }
 ul.breadcrumb a {
   color: #fff
