--- a/development/terminalfour/src/sass/ContentTypes/_variables.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_variables.scss
@@ -1,6 +1,9 @@
 // MSU Denver Colors
 .custombtn {
-    background: #00447C;
+    background: #e5e5e5;
+    color: #00447c uppercase;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.125rem;
 }
 
 .turquoise-f {
@@ -112,27 +115,27 @@
 .contentlink {
   background: #1b557a
 }
-.rowdyblue {
-  background: #00447c;
-  color: #fff!important
-}
-.rowdyblue:hover {
-  background: #003663;
-  color: #fff!important
-}
-.rowdyred {
-  background: #c50f3c;
-  color: #fff!important
-}
-.rowdyred:hover {
-  background: #ad0d35;
-  color: #fff!important
-}
-.rowdygray {
-  background: #717073;
-  color: #fff!important
-}
-.rowdygray:hover {
-  background: #646366;
-  color: #fff!important
-}
+// .rowdyblue {
+//   background: #00447c;
+//   color: #fff!important
+// }
+// .rowdyblue:hover {
+//   background: #003663;
+//   color: #fff!important
+// }
+// .rowdyred {
+//   background: #c50f3c;
+//   color: #fff!important
+// }
+// .rowdyred:hover {
+//   background: #ad0d35;
+//   color: #fff!important
+// }
+// .rowdygray {
+//   background: #717073;
+//   color: #fff!important
+// }
+// .rowdygray:hover {
+//   background: #646366;
+//   color: #fff!important
+// }
