--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -8884,7 +8884,10 @@ footer {
 }
 /**  ContentType Styles **/
 .custombtn {
-  background: #00447C;
+  background: #e5e5e5;
+  color: #00447c uppercase;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.125rem;
 }
 
 .turquoise-f {
@@ -9024,36 +9027,6 @@ footer {
   background: #1b557a;
 }
 
-.rowdyblue {
-  background: #00447c;
-  color: #fff !important;
-}
-
-.rowdyblue:hover {
-  background: #003663;
-  color: #fff !important;
-}
-
-.rowdyred {
-  background: #c50f3c;
-  color: #fff !important;
-}
-
-.rowdyred:hover {
-  background: #ad0d35;
-  color: #fff !important;
-}
-
-.rowdygray {
-  background: #717073;
-  color: #fff !important;
-}
-
-.rowdygray:hover {
-  background: #646366;
-  color: #fff !important;
-}
-
 .content {
   margin: 0 auto 15px;
   line-height: 1.6em;
@@ -9084,14 +9057,13 @@ footer {
 }
 
 .content a {
-  color: #248dc1;
-  text-decoration: none;
+  color: #007dc3;
   font-weight: 700;
 }
 
 .content a:hover {
-  color: #003663;
   border-bottom: 1px solid;
+  text-decoration: none;
 }
 
 .content .description {
@@ -9102,23 +9074,6 @@ footer {
   margin: 50px 0 20px;
   font-weight: 300;
   color: #888;
-}
-
-.content p a,
-.content ul a {
-  color: #248dc1 !important;
-  text-decoration: none !important;
-  padding-bottom: 0px !important;
-  border-bottom: 0px solid #248dc1 !important;
-  transition: all 250ms ease-in-out;
-}
-
-.content p a:hover,
-.content ul a:hover {
-  text-decoration: none !important;
-  padding-bottom: 3px !important;
-  border-bottom: 2px solid #248dc1 !important;
-  transition: all 250ms ease-in-out;
 }
 
 #layout, #menu, .menu-link {
@@ -10143,8 +10098,9 @@ hr.style-one {
 
 .HighlightBox .HighlightBox-title {
   color: #fff;
-  font-size: 1.5em;
   text-align: center;
+  font-weight: 700;
+  font-size: 24px;
 }
 
 .HighlightBox .HighlightBox-content a {
@@ -10345,6 +10301,8 @@ hr.style-one {
 
 .panel-heading {
   border-radius: 0;
+  font-weight: 700;
+  font-size: 24px;
 }
 
 .panel-default > .panel-heading {
@@ -10356,6 +10314,8 @@ hr.style-one {
 
 .panel-title {
   color: #fff;
+  font-weight: 700;
+  font-size: 24px;
 }
 
 .panel-group {
@@ -10366,9 +10326,9 @@ hr.style-one {
 .panel-danger > .panel-heading {
   background: #d63647;
   color: white;
-  font-size: 1.75em;
-  font-weight: 100;
   border-color: #df1300;
+  font-weight: 700;
+  font-size: 24px;
 }
 
 .panel-danger {
@@ -10519,10 +10479,11 @@ div#lhnContainerDone {
 }
 body {
   margin-top: 70px;
-  font-family: Open Sans, helvetica, arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  color: #333;
+  font-family: 'Karla', Open Sans, helvetica, arial, sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  color: #1e1e1e;
+  line-height: 1.6em;
   -webkit-font-smoothing: subpixel-antialiased !important;
   -ms-backface-visibility: hidden;
 }
@@ -10612,6 +10573,7 @@ img {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Karla', Open Sans, helvetica, arial, sans-serif;
+  font-weight: 400;
 }
 
 h1 {
@@ -10620,9 +10582,9 @@ h1 {
 }
 
 h2 {
-  font-weight: 600;
-  color: #00529c;
-  font-size: 2.2em;
+  font-weight: 700;
+  color: #4e5462;
+  font-size: 2.25rem;
   width: 100%;
   margin: 0px;
   margin-bottom: 15px;
@@ -10630,24 +10592,24 @@ h2 {
 }
 
 h3 {
-  color: #4C4C4D;
-  font-size: 1.8em;
+  color: #414b63;
+  font-size: 1.875em;
   font-weight: 400;
   margin-bottom: 4px;
   margin-top: 2px;
 }
 
 h4 {
-  color: #015FAE;
-  font-size: 1.4em;
-  font-weight: 400;
+  color: #000000;
+  font-size: 1.25rem;
+  font-weight: 700;
   line-height: 1.3;
 }
 
 h5 {
-  color: #971200;
-  font-size: 1.2em;
-  font-weight: 600;
+  color: #535354;
+  font-size: 1.125em;
+  font-weight: 700;
 }
 
 h6 {
@@ -10662,8 +10624,9 @@ h6 {
 }
 
 ul.breadcrumb {
-  font-size: 16px;
   color: #fff;
+  font-family: 'Karla', Open Sans, helvetica, arial, sans-serif;
+  font-size: 1em;
 }
 
 ul.breadcrumb a {
@@ -10834,10 +10797,6 @@ hr {
 .custombtn {
   margin-bottom: 15px;
   width: 100%;
-}
-
-.custombtn span {
-  color: #FFF;
 }
 
 /*# sourceMappingURL=inner-style.css.map */
