comment out flat ui variables and highlight-box alternates

--- a/development/terminalfour/src/sass/ContentTypes/_HighlightBox.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_HighlightBox.scss
@@ -21,23 +21,23 @@
   font-size: 1em
 }
 
-.linkcolumn .HighlightBox {
-  margin: 0 0 1em;
-  background: #c0392b;
-  zoom: 1
-}
-.linkcolumn .HighlightBox a {
-  word-break: break-word
-}
-.ThreeColumnRight .HighlightBox {
-  margin: 0 0 1em;
-  background: #16a085
-}
-.ThreeColumnRight .HighlightBox .HighlightBox-title {
-  color: #fff;
-  font-size: 1.5em;
-  text-align: center
-}
+// .linkcolumn .HighlightBox {
+//   margin: 0 0 1em;
+//   background: #c0392b;
+//   zoom: 1
+// }
+// .linkcolumn .HighlightBox a {
+//   word-break: break-word
+// }
+// .ThreeColumnRight .HighlightBox {
+//   margin: 0 0 1em;
+//   background: #16a085
+// }
+// .ThreeColumnRight .HighlightBox .HighlightBox-title {
+//   color: #fff;
+//   font-size: 1.5em;
+//   text-align: center
+// }
 .ThreeColumnRight .HighlightBox, .ThreeColumnRight .HighlightBox .HighlightBox-content, .ThreeColumnRight .HighlightBox .HighlightBox-content a, .ThreeColumnRight .HighlightBox .HighlightBox-content a:hover, .ThreeColumnRight .HighlightBox a, .ThreeColumnRight .HighlightBox a:hover, .content .HighlightBox .HighlightBox-content, .content .HighlightBox .HighlightBox-content a, .content .HighlightBox .HighlightBox-content a:hover {
   color: #fff
 }
