--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -8890,109 +8890,6 @@ footer {
   font-size: 1.125rem;
 }
 
-.turquoise-f {
-  color: red !important;
-}
-
-.turquoise {
-  background: #1ABC9C;
-}
-
-.greensea {
-  background: #16A085;
-  color: #fff !important;
-}
-
-.emerald {
-  background: #2ECC71;
-  color: #fff !important;
-}
-
-.nephritis {
-  background: #27AE60;
-  color: #fff !important;
-}
-
-.peterriver {
-  background: #3498DB;
-  color: #fff !important;
-}
-
-.belizehole {
-  background: #2980B9;
-  color: #fff !important;
-}
-
-.amethyst {
-  background: #9B59B6;
-  color: #fff !important;
-}
-
-.wisteria {
-  background: #8E44AD;
-  color: #fff !important;
-}
-
-.wetasphalt {
-  background: #34495E;
-  color: #fff !important;
-}
-
-.midnightblue {
-  background: #2C3E50;
-  color: #fff !important;
-}
-
-.sunflower {
-  background: #F1C40F;
-  color: #fff !important;
-}
-
-.orange {
-  background: #F39C12;
-  color: #fff !important;
-}
-
-.carrot {
-  background: #E67E22;
-  color: #fff !important;
-}
-
-.pumpkin {
-  background: #D35400;
-  color: #fff !important;
-}
-
-.alizarin {
-  background: #E74C3C;
-  color: #fff !important;
-}
-
-.pomegranate {
-  background: #C0392B;
-  color: #fff !important;
-}
-
-.clouds {
-  background: #ECF0F1;
-  color: #000 !important;
-}
-
-.silver {
-  background: #BDC3C7;
-  color: #000 !important;
-}
-
-.asbestos {
-  background: #7F8C8D;
-  color: #000 !important;
-}
-
-.concrete {
-  background: #95A5A6;
-  color: #000 !important;
-}
-
 .blue {
   background: #007DC3;
 }
@@ -9025,6 +8922,36 @@ footer {
 
 .contentlink {
   background: #1b557a;
+}
+
+.rowdyblue {
+  background: #00447c;
+  color: #fff !important;
+}
+
+.rowdyblue:hover {
+  background: #003663;
+  color: #fff !important;
+}
+
+.rowdyred {
+  background: #c50f3c;
+  color: #fff !important;
+}
+
+.rowdyred:hover {
+  background: #ad0d35;
+  color: #fff !important;
+}
+
+.rowdygray {
+  background: #717073;
+  color: #fff !important;
+}
+
+.rowdygray:hover {
+  background: #646366;
+  color: #fff !important;
 }
 
 .content {
@@ -10106,27 +10033,6 @@ hr.style-one {
 .HighlightBox .HighlightBox-content a {
   color: #fff !important;
   font-size: 1em;
-}
-
-.linkcolumn .HighlightBox {
-  margin: 0 0 1em;
-  background: #c0392b;
-  zoom: 1;
-}
-
-.linkcolumn .HighlightBox a {
-  word-break: break-word;
-}
-
-.ThreeColumnRight .HighlightBox {
-  margin: 0 0 1em;
-  background: #16a085;
-}
-
-.ThreeColumnRight .HighlightBox .HighlightBox-title {
-  color: #fff;
-  font-size: 1.5em;
-  text-align: center;
 }
 
 .ThreeColumnRight .HighlightBox, .ThreeColumnRight .HighlightBox .HighlightBox-content, .ThreeColumnRight .HighlightBox .HighlightBox-content a, .ThreeColumnRight .HighlightBox .HighlightBox-content a:hover, .ThreeColumnRight .HighlightBox a, .ThreeColumnRight .HighlightBox a:hover, .content .HighlightBox .HighlightBox-content, .content .HighlightBox .HighlightBox-content a, .content .HighlightBox .HighlightBox-content a:hover {
