--- a/development/terminalfour/src/sass/ContentTypes/_HighlightBox.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_HighlightBox.scss
@@ -3,12 +3,12 @@
   color: #fff;
   padding: 1.5em;
   margin-bottom: 1.5em;
-  background: #16a085;
+  background: grey;
   position: relative;
-  zoom: 1;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05)
+  // zoom: 1;
+  // -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  // -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  // box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05)
 }
 .HighlightBox .HighlightBox-title {
   color: #fff;
