--- a/development/terminalfour/src/sass/ContentTypes/_panel.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_panel.scss
@@ -9,7 +9,7 @@
     font-size: 24px;
 }
 .panel-default > .panel-heading {
-    background: #00447C;
+    background: grey;
     color: #fff;
     font-size: 1.5em;
     border-color: #00447C;
