--- a/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
@@ -21,7 +21,7 @@
   left: 150px;
   bottom: 0;
   z-index: 9998;
-  // background: #002856;
+  background: #fff;
   color:black;
   -webkit-overflow-scroll: touch
 }
@@ -44,8 +44,13 @@
   -o-transition: all .25 ease-in-out;
   transition: all .25 ease-in-out
 }
+
+ul.nav.nav-list {
+    margin-top: 15px;
+}
+
 #menu .pure-menu, #menu .pure-menu ul {
-  border: none
+  border: none;
 }
 #menu .pure-menu li a:focus, #menu .pure-menu li a:hover {
   // background: #fff;
@@ -104,8 +109,8 @@
 .menu-link:focus span, .menu-link:hover span {
   position: relative;
   display: block;
-  background: #fff;
-  color: #fff;
+  // background: #fff;
+  // color: #fff;
   width: 100%;
   height: .2em
 }
@@ -196,7 +201,7 @@ ul.multilevel-linkul-0 {
 .sidebar-nav li a {
   display: block;
   line-height: 1em;
-  color: #fff;
+  // color: #fff;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 10px;
@@ -209,15 +214,15 @@ ul.multilevel-linkul-0 {
   padding-bottom: 0
 }
 .sidebar-nav li a:hover {
-  background: #fff;
+  background: light-gray;
   -webkit-transition: all .25s ease-in-out;
   -moz-transition: all .25s ease-in-out;
   -o-transition: all .25s ease-in-out;
   transition: all .25s ease-in-out
 }
-.sidebar-nav a:hover, .sidebar-nav li a:after {
-  color: #fff
-}
+// .sidebar-nav a:hover, .sidebar-nav li a:after {
+//   color: #fff
+// }
 ul.multilevel-linkul-0 li {
   // background: #00447C
 }
@@ -237,14 +242,10 @@ ul.multilevel-linkul-5 li {
   // background: #55a5d9
 }
 .currentbranch0 a {
-  background: #fff;
-  color: #20638f!important
+  // background: #fff;
+  // color: #20638f!important
 }
-.currentbranch1 a, .currentbranch2 a {
-  background: #fff;
-  color: #003663!important
-}
-.currentbranch3 a, .currentbranch4 a {
-  background: #fff;
-  color: #003663!important
+.currentbranch1 a, .currentbranch2 a, .currentbranch3 a, .currentbranch4 a {
+  // background: #fff;
+  // color: #003663!important
 }
