change chevron down class; change panel title border color

--- a/development/terminalfour/src/sass/ContentTypes/_panel.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_panel.scss
@@ -12,7 +12,7 @@
     background: grey;
     color: #fff;
     font-size: 1.5em;
-    border-color: #00447C;
+    // border-color: #00447C;
 }
 .panel-title {
     color: #fff;
