adds styles for academic programs

--- a/development/terminalfour/src/sass/inner-style.scss
+++ b/development/terminalfour/src/sass/inner-style.scss
@@ -29,6 +29,7 @@ header {
 
 /**  ContentType Styles **/
 @import "ContentTypes/variables";
+@import "ContentTypes/programs";
 @import "ContentTypes/content";
 @import "ContentTypes/navmenu";
 @import "ContentTypes/TableStyles";
