--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -70,6 +70,7 @@
   background-color: #fff;
   max-height: none;
   transition: max-height 500ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
+  box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175);
 }
 
 #content-nav #nav-search-close {
