--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -205,10 +205,10 @@ ul.breadcrumb a {
 .navbar-inverse .navbar-nav>.open {
   background-color: #2c3e50
 }
-.container-fluid {
-  padding-right: 0;
-  padding-left: 0
-}
+// .container-fluid {
+//   padding-right: 0;
+//   padding-left: 0
+// }
 .img-thumbnail, .thumbnail {
   padding: .5em;
   margin: 1em
