--- a/development/terminalfour/src/sass/msu-partials/_homepage-base.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-base.scss
@@ -1,21 +1,22 @@
 /* Homepage base styles */
 .homepage-main {
     @include container-fixed();
+    margin-top: 70px;
 }
-.homepage-feature { 
+.homepage-feature {
     @include make-row();
     padding-top: 36px;
     padding-top: torem(36, $small-unit);
     padding-bottom: 36px;
     padding-bottom: torem(36, $small-unit);
     background-color: $gray-base;
-    svg { fill: currentColor; } 
-    
+    svg { fill: currentColor; }
+
 }
-.homepage-feature-block { 
+.homepage-feature-block {
     @include make-sm-column(12);
 }
-.feature-heading { 
+.feature-heading {
     font-size: 27.2px; //55px @ 12px
     font-size: torem(27.2); //55px @ 12px
     line-height: 1.3;
@@ -39,7 +40,7 @@
     line-height: 1.5;
     color: #fff;
 }
-.feature-text { 
+.feature-text {
     font-size: 24px; //55px @ 12px
     font-size: torem(24); //55px @ 12px
     font-weight: 400;
@@ -51,7 +52,7 @@
 .homepage-btn {
     font-family: $font-family-sans-serif;
     font-weight: 900;
-    font-size: 20.8px; 
+    font-size: 20.8px;
     font-size: torem(20.8); //33px @ 14px
     padding: 10px 30px;
     padding: torem(10) torem(30);
@@ -61,8 +62,8 @@
     border-radius: 11px;
     float: right;
     &:hover, &:active, &:focus {
-        color:  $msu-red;    
-    }  
+        color:  $msu-red;
+    }
 }
 .main-button {
     margin-bottom: 0;
@@ -78,10 +79,10 @@
 }
 
 @media (max-width: $screen-sm-max) {
-    .main-button .fa { 
+    .main-button .fa {
         display: none;
     }
-    
+
 }
 @media (min-width: $screen-md-min) {
     .homepage-feature {
@@ -99,7 +100,7 @@
         line-height: 60;
         margin: 0 0 25px;
         margin: 0 0 torem(25, $small-unit);
-        
+
     }
     .homepage-btn {
         float: none;
@@ -113,9 +114,9 @@
             color: $white;
             background-color: transparent;
             &:hover, &:active, &:focus {
-                color:  $white;    
+                color:  $white;
                 text-decoration: underline;
-            } 
+            }
         }
     }
     /* Wraps buttons in the main body area */
@@ -124,7 +125,7 @@
         padding: 10px 0px;
         padding: torem(10) torem(0);
         color: $white;
-        text-align: right;   
+        text-align: right;
         font-size: 30px; //33px @ 14px
         font-size: torem(30, $base-unit); //33px @ 14px
         .homepage-btn {
@@ -132,5 +133,5 @@
             line-height: 1;
         }
     }
-    
+
 }
