--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -8328,6 +8328,7 @@ header {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
+  margin-top: 70px;
 }
 .homepage-main:before, .homepage-main:after {
   content: " ";
@@ -9160,8 +9161,6 @@ h4 {
   min-width: inherit;
   padding: 1.5em;
   color: #333;
-  background: #fff;
-  max-width: 1200px;
 }
 
 .content .img-responsive {
@@ -9171,6 +9170,7 @@ h4 {
 .content .hero > .img-responsive {
   padding: inherit;
   margin-bottom: 30px;
+  width: 100%;
 }
 
 .content .nopadding img.img-responsive {
@@ -10764,11 +10764,6 @@ ul.breadcrumb a {
 
 .navbar-inverse .navbar-nav > .open {
   background-color: #2c3e50;
-}
-
-.container-fluid {
-  padding-right: 0;
-  padding-left: 0;
 }
 
 .img-thumbnail, .thumbnail {
