--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
-/** 
+/**
     ===========================================
-            Start Bootstrap  v 3.3.7  
+            Start Bootstrap  v 3.3.7
     ===========================================
 **/
 /*!
@@ -7389,9 +7389,9 @@ button.close {
   }
 }
 /** -------  End Bootstrap  v 3.3.7 -------- **/
-/** 
+/**
     =================================================
-        MSU Denver 2016 custom style declarations 
+        MSU Denver 2016 custom style declarations
     =================================================
 **/
 /** SVG fallback for IE 8 **/
@@ -8328,6 +8328,7 @@ header {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
+  margin-top: 70px;
 }
 .homepage-main:before, .homepage-main:after {
   content: " ";
@@ -8500,6 +8501,23 @@ header {
     line-height: 1;
   }
 }
+#homepage-second-nav {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  margin-top: 0px;
+  padding: 0;
+  position: relative;
+  height: 100px;
+}
+#homepage-second-nav span {
+  color: #fff;
+  font-size: 2.5rem;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
 /* Homepage-feature-caption partial */
 #homepage-feature-caption {
   padding: 0;
