--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -191,9 +191,9 @@ h6 {
 .form-control {
   width: 80%
 }
-.navbar-inverse .navbar-nav>.open {
-  background-color: #2c3e50
-}
+// .navbar-inverse .navbar-nav>.open {
+//   background-color: #2c3e50
+// }
 // .container-fluid {
 //   padding-right: 0;
 //   padding-left: 0
@@ -206,8 +206,6 @@ h6 {
 .modal-dialog {
   padding-top: 12%
 }
-
-
 
 .custom-search-input{
     margin-top:5px;
