--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -9156,48 +9156,36 @@ h4 {
 }
 
 .content {
-  margin: 0 auto 15px;
   line-height: 1.6em;
-  min-width: inherit;
-  padding: 1.5em;
-  color: #333;
 }
-
 .content .img-responsive {
   padding: 0 15px;
 }
-
 .content .hero > .img-responsive {
   padding: inherit;
   margin-bottom: 30px;
   width: 100%;
 }
-
 .content .nopadding img.img-responsive {
   padding: 0;
 }
-
 .content img.border {
   padding: 10px;
   border: 1px solid #ececec;
   background: #fff;
 }
-
 .content a {
   color: #007dc3;
   font-weight: 700;
 }
-
 .content a:hover {
   border-bottom: 1px solid;
   text-decoration: none;
 }
-
 .content .description {
   font-size: 10px;
 }
-
-.content-subhead {
+.content .content-subhead {
   margin: 50px 0 20px;
   font-weight: 300;
   color: #888;
@@ -10755,10 +10743,6 @@ h6 {
 
 .form-control {
   width: 80%;
-}
-
-.navbar-inverse .navbar-nav > .open {
-  background-color: #2c3e50;
 }
 
 .img-thumbnail, .thumbnail {
